# rsys

./: .gitignore  CMakeLists.txt  README.md  main.cc  rsys.pro  rsys.py.cc
algs/: svd.h
ex/: CMakeLists.txt  ex.cc  exporters_ex.cc  main.cc  rsys_ex.cc
math/: matrix.h  mexception.h  mvector.h  sparse.h
rsys-python/: exporters.h  rsys.py.cc  setup.py  vector_converter.h
rsys-python/py_tests/: db.py  movielens.py  test.py  vkrsys.py
src/: CMakeLists.txt  main.cc
src/algs/: rbm.h  rsys.h  svd.h
src/algs/config/: svd_config.h
src/core/: item_score.h  model.h  rbm.h  rsys.h  svd.h
src/core/config/: config.h  svd_config.h
src/core/data_sources/: imatrix.h  matrix.h  mexception.cc  mexception.h  mvector.h  sparse_matrix.h
src/core/ensemblers/: ensembler.h
src/core/util/: base_iterator.h
src/data_sources/: data_source.h  simple_ds.h
src/data_structures/: imatrix.h  matrix.h  mexception.cc  mexception.h  mvector.h  sparse_matrix.h
src/math/: imatrix.h  matrix.h  mexception.cc  mexception.h  mvector.h  sparse.h  sparse_matrix.h
src/rsys/: core.cc  item_score.h  model.h  ratings_data.h  rbm.h  recommender.h  svd.h
src/rsys/config/: config.h  svd_config.h
src/rsys/data_sources/: data_source.h  db_source.h  imatrix.h  map_index.h  map_matrix.h  map_mvector.h  matrix.h  mexception.cc  mvector.h  mysql_source.h  sparse_matrix.h
src/rsys/db_conf/: mysql_config.cc  mysql_config.h
src/rsys/ensemblers/: ensembler.h
src/rsys/exporters/: errors.h  exporter.h  mysql_exporter.cc  mysql_exporter.h  svd_exporter.h  svd_mysql_exporter.cc  svd_mysql_exporter.h
src/rsys/models/: model.h  rbm.h  svd.h
src/rsys/models/cf/: cf_base.h  cf_config.h  cfii.h  cfii_config.h  cfuu.h  cfuu_config.h
src/rsys/models/cf/aggregators/: aggr.h  aggr_avg.h  aggr_simple.h  aggr_simple_biased.h
src/rsys/models/cf/simil/: simil_cos.h  simil_pearson.h  similarity.h
src/rsys/models/cf_uu/: cf_uu.h  cf_uu_config.h
src/rsys/models/cf_uu/aggregators/: aggr.h  aggr_avg.h  aggr_simple.h
src/rsys/models/cfuu/: cfuu.h  cfuu_config.h
src/rsys/models/cfuu/aggregators/: aggr.h  aggr_avg.h  aggr_simple.h  aggr_simple_biased.h
src/rsys/models/cfuu/simil/: simil.h  simil_cos.h  simil_pearson.h
src/rsys/models/rbm/: rbm.h  rbm_config.h
src/rsys/predictors/: linear_predictor.h  predictor.h  sigmoid_predictor.h
src/rsys/util/: base_iterator.h  traits.h  util.cc  util.h
src/util/: base_iterator.h  traits.h
src/vkrsys/: main.cc
tests/: CMakeLists.txt  matrix_test.h  rsys_test.h  test.cc
util/: traits.h
